bugfix: articles with toc appearing blank on mobile

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,7 +1,1 @@
 /* Place your custom SCSS in HUGO_SITE_FOLDER/assets/scss/custom.scss */
-
-mark { // this shit is for highlighting
-  background-color: inherit;
-  color: var(--color-orange-one); 
-  font-weight: bold;
-}
